Fix width issue on small screens

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -480,7 +480,7 @@ article a:focus > img:only-child:empty{
 #R-body .flex-block-wrapper {
     margin-left: auto;
     margin-right: auto;
-    max-width: calc( 101.25rem - var(--INTERNAL-MENU-WIDTH-L) - 2 * 3.25rem );
+    max-width: calc(100% - 2 * 3.25rem);
     width: 100%;
 }
 body:not(.print) #R-body .narrow .flex-block-wrapper {
